@@ -1,5 +1,15 @@
 2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* shimbun.el (shimbun-decode-anchor-string): New alias to
+	w3m-decode-anchor-string.
+	(shimbun-mime-replace-image-tags): Use it to decode "&amp;" to "&" in
+	url string.
+
+	* sb-pocketgames.el (shimbun-get-headers): Use
+	shimbun-decode-anchor-string instead of w3m-decode-anchor-string.
+
+2008-01-17  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* sb-asahi.el (shimbun-asahi-prepare-article): Update regexp.
 
 2008-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>
